# OurPrompt-A-Prompt-Management-Tool-for-Researchers

./: LICENSE  README.en.md  README.md  firebase-applet-config.json  firebase-blueprint.json  firestore.rules  fix_constants.js  metadata.json  package-lock.json  package.json  parse_prompts.cjs  parsed_prompts.json  tsconfig.json  update_constants.js
.github/workflows/: release.yml
components/ui/: scroll-area.tsx
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/lib/: constants.ts
