[package]
name = "ourprompt"
version = "1.0.3"
description = "OurPrompt desktop app built with Tauri"
authors = ["OurPrompt"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
open = "5"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
